# Vector-Classifier

./: .gitignore  CMakeLists.txt  MasterDistance.h  README.md  VectorBase.h  VectorCreation.cpp  main.cpp  makefile
client/: CLI.cpp  CLI.h  CMakeLists.txt  ClassifyData.cpp  ClassifyData.h  Command.cpp  Command.h  DefaultIO.cpp  DefaultIO.h  DisplayResults.cpp  DisplayResults.h  DownloadResults.cpp  DownloadResults.h  SetAlgo.cpp  SetAlgo.h  SocketIO.cpp  SocketIO.h  UploadCSV.cpp  UploadCSV.h  VectorCreation.cpp  main.cpp
datasets/beans/: beans_Classified.csv
server/: CLI.cpp  CLI.h  CMakeLists.txt  Canberra.cpp  Canberra.h  Chebyshev.cpp  Chebyshev.h  ClassifyData.cpp  ClassifyData.h  Command.cpp  Command.h  CsvReading.cpp  CsvReading.h  DefaultIO.cpp  DefaultIO.h  DisplayResults.cpp  DisplayResults.h  DownloadResults.cpp  DownloadResults.h  Euclidean.cpp  Euclidean.h  Manhattan.cpp  Manhattan.h  MasterDistance.cpp  MasterDistance.h  Minkowski.cpp  Minkowski.h  SetAlgo.cpp  SetAlgo.h  SocketIO.cpp  SocketIO.h  UploadCSV.cpp  UploadCSV.h  VectorBase.cpp  VectorBase.h  VectorCreation.cpp  VectorCreation.h  main.cpp
